fixed sidebar background on mobile nav

--- a/organizations/salesforce/salesforce.css
+++ b/organizations/salesforce/salesforce.css
@@ -172,7 +172,8 @@ button.download_button {
 }
 */
 
-.sidebar-main {
+.sidebar-main,
+.sidebar-mobile {
     background: #ffffff;
     border-right: 3px solid #8aaf2a;
     color: #1a4980;
